# backend/src/search/search.controller.ts
@@ -1,0 +1,13 @@
+import { Controller, Get, Query } from '@nestjs/common';
+import { SearchService } from './search.service';
+import { QuerySearchDto } from './dto/query-search.dto';
+
+@Controller('search')
+export class SearchController {
+  constructor(private readonly searchService: SearchService) {}
+
+  @Get()
+  search(@Query() query: QuerySearchDto) {
+    return this.searchService.search(query);
+  }
+}
